Wed Feb 18 22:17:04 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* pack.c (pack_pack): propagate taint status from format string to
	  result string.

Wed Feb 18 22:07:44 2009  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* ext/gdbm/gdbm.c: do not set members of RSTRING(str) directly.
	  [ruby-dev:37182]

	* ext/gdbm/gdbm.c (rb_gdbm_nextkey): fix memory leak.

Tue Feb 17 11:58:58 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_independent): no independent string points null_str.
	  [ruby-core:20082]

Mon Feb 16 23:30:24 2009  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tkextlib/blt.rb, ext/tk/lib/tkextlib/blt/vector.rb: 
	  fix NameError bug.

Mon Feb 16 23:08:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_s_alloc, rb_str_replace): use null_str as well as
	  rb_string_value so that extension libraries do not segfault.
	  [ruby-core:19971]

	* string.c (rb_str_replace): reduced unnecessary malloc and copy.

Mon Feb 16 22:45:41 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: fixed fails occasionally [ruby-dev:37119].
	  thanks, shinichiro.h.

Mon Feb 16 22:36:37 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbConn::alive?): fixed NoMethodError problem
	  from NaHi [ruby-dev:37110].

Sun Feb 15 04:21:42 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/net/ftp.rb (Net::FTP#open_socket): SOCKSsocket is obsolete.
	  a patch from Alan Johnson <alan.wayne.johnson at gmail.com> in 
	  [ruby-core:19982].

Fri Feb 13 19:18:42 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/logger.rb (ProgName): fixed for svn, based on a patch from
	  Nobuhiro IMAI at [ruby-dev:37108].

Sun Feb 15 04:17:40 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/webrick/httprequest.rb (WEBrick::HTTPRequest#read_request_line):
	  use non-greedy match for path retrieval to avoid huge recursion
	  for insanely long path.
